// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`1 matches snapshot: Expression: 1 1`] = `
{
  "int": {
    "size": 32,
    "value": 1n,
  },
}
`;

exports[`a matches snapshot: Expression: a 1`] = `
{
  "name": "a",
}
`;

exports[`"testing" matches snapshot: Expression: "testing" 1`] = `
{
  "string": "testing",
}
`;

exports[`a + b * c - d matches snapshot: Expression: a + b * c - d 1`] = `
{
  "infix": {
    "left": {
      "name": "a",
    },
    "op": "+",
    "right": {
      "infix": {
        "left": {
          "infix": {
            "left": {
              "name": "b",
            },
            "op": "*",
            "right": {
              "name": "c",
            },
          },
        },
        "op": "-",
        "right": {
          "name": "d",
        },
      },
    },
  },
}
`;

exports[`a + b + c + d matches snapshot: Expression: a + b + c + d 1`] = `
{
  "infix": {
    "left": {
      "name": "a",
    },
    "op": "+",
    "right": {
      "infix": {
        "left": {
          "name": "b",
        },
        "op": "+",
        "right": {
          "infix": {
            "left": {
              "name": "c",
            },
            "op": "+",
            "right": {
              "name": "d",
            },
          },
        },
      },
    },
  },
}
`;

exports[`a ** b ** c ** d matches snapshot: Expression: a ** b ** c ** d 1`] = `
{
  "infix": {
    "left": {
      "infix": {
        "left": {
          "infix": {
            "left": {
              "name": "a",
            },
            "op": "**",
            "right": {
              "name": "b",
            },
          },
        },
        "op": "**",
        "right": {
          "name": "c",
        },
      },
    },
    "op": "**",
    "right": {
      "name": "d",
    },
  },
}
`;

exports[`(a + b) * c matches snapshot: Expression: (a + b) * c 1`] = `
{
  "infix": {
    "left": {
      "infix": {
        "left": {
          "name": "a",
        },
        "op": "+",
        "right": {
          "name": "b",
        },
      },
    },
    "op": "*",
    "right": {
      "name": "c",
    },
  },
}
`;

exports[`foo() matches snapshot: Expression: foo() 1`] = `
{
  "call": [
    {
      "name": "foo",
    },
    [],
  ],
}
`;

exports[`foo(1, 2, bar) matches snapshot: Expression: foo(1, 2, bar) 1`] = `
{
  "call": [
    {
      "name": "foo",
    },
    [
      {
        "int": {
          "size": 32,
          "value": 1n,
        },
      },
      {
        "int": {
          "size": 32,
          "value": 2n,
        },
      },
      {
        "name": "bar",
      },
    ],
  ],
}
`;

exports[`obj.field matches snapshot: Expression: obj.field 1`] = `
{
  "select": [
    {
      "name": "obj",
    },
    {
      "name": "field",
    },
  ],
}
`;

exports[`obj.method(x, y) matches snapshot: Expression: obj.method(x, y) 1`] = `
{
  "call": [
    {
      "select": [
        {
          "name": "obj",
        },
        {
          "name": "method",
        },
      ],
    },
    [
      {
        "name": "x",
      },
      {
        "name": "y",
      },
    ],
  ],
}
`;

exports[`MyType matches snapshot: Expression: MyType 1`] = `
{
  "constr": "MyType",
}
`;

exports[`MyType() matches snapshot: Expression: MyType() 1`] = `
{
  "call": [
    {
      "constr": "MyType",
    },
    [],
  ],
}
`;

exports[`#(1, 2, 3) matches snapshot: Expression: #(1, 2, 3) 1`] = `
{
  "tuple": [
    {
      "int": {
        "size": 32,
        "value": 1n,
      },
    },
    {
      "int": {
        "size": 32,
        "value": 2n,
      },
    },
    {
      "int": {
        "size": 32,
        "value": 3n,
      },
    },
  ],
}
`;

exports[`#{x: 1, y: 2} matches snapshot: Expression: #{x: 1, y: 2} 1`] = `
{
  "record": [
    [
      {
        "name": "x",
      },
      {
        "int": {
          "size": 32,
          "value": 1n,
        },
      },
    ],
    [
      {
        "name": "y",
      },
      {
        "int": {
          "size": 32,
          "value": 2n,
        },
      },
    ],
  ],
}
`;

exports[`{ a; b; c } matches snapshot: Expression: { a; b; c } 1`] = `
{
  "block": [
    {
      "expression": {
        "name": "a",
      },
    },
    {
      "expression": {
        "name": "b",
      },
    },
    {
      "expression": {
        "name": "c",
      },
    },
  ],
}
`;

exports[`{ let x = 1; x + 2 } matches snapshot: Expression: { let x = 1; x + 2 } 1`] = `
{
  "block": [
    {
      "let_bind": {
        "assert": false,
        "expression": {
          "int": {
            "size": 32,
            "value": 1n,
          },
        },
        "pattern": {
          "name": "x",
        },
      },
    },
    {
      "expression": {
        "infix": {
          "left": {
            "name": "x",
          },
          "op": "+",
          "right": {
            "int": {
              "size": 32,
              "value": 2n,
            },
          },
        },
      },
    },
  ],
}
`;

exports[`if a { b } else { c } matches snapshot: Expression: if a { b } else { c } 1`] = `
{
  "if_expr": {
    "cond": {
      "name": "a",
    },
    "else_body": {
      "block": [
        {
          "expression": {
            "name": "c",
          },
        },
      ],
    },
    "if_body": {
      "block": [
        {
          "expression": {
            "name": "b",
          },
        },
      ],
    },
  },
}
`;

exports[`if a { b } matches snapshot: Expression: if a { b } 1`] = `
{
  "if_expr": {
    "cond": {
      "name": "a",
    },
    "else_body": null,
    "if_body": {
      "block": [
        {
          "expression": {
            "name": "b",
          },
        },
      ],
    },
  },
}
`;

exports[`match x { A => 1, B => 2, _ => 3 } matches snapshot: Expression: match x { A => 1, B => 2, _ => 3 } 1`] = `
{
  "match": [
    {
      "name": "x",
    },
    [
      {
        "body": {
          "int": {
            "size": 32,
            "value": 1n,
          },
        },
        "guard": null,
        "pattern": {
          "constr": [
            {
              "type": "A",
            },
            [],
          ],
        },
      },
      {
        "body": {
          "int": {
            "size": 32,
            "value": 2n,
          },
        },
        "guard": null,
        "pattern": {
          "constr": [
            {
              "type": "B",
            },
            [],
          ],
        },
      },
      {
        "body": {
          "int": {
            "size": 32,
            "value": 3n,
          },
        },
        "guard": null,
        "pattern": {
          "name": "_",
        },
      },
    ],
  ],
}
`;

exports[`{ a <- try(explosion()) } matches snapshot: Expression: { a <- try(explosion()) } 1`] = `
{
  "block": [
    {
      "arrow_bind": {
        "expression": {
          "call": [
            {
              "name": "try",
            },
            [
              {
                "call": [
                  {
                    "name": "explosion",
                  },
                  [],
                ],
              },
            ],
          ],
        },
        "name": {
          "name": "a",
        },
      },
    },
  ],
}
`;

exports[`foo(1).bar(2, 3).baz matches snapshot: Expression: foo(1).bar(2, 3).baz 1`] = `
{
  "select": [
    {
      "call": [
        {
          "select": [
            {
              "call": [
                {
                  "name": "foo",
                },
                [
                  {
                    "int": {
                      "size": 32,
                      "value": 1n,
                    },
                  },
                ],
              ],
            },
            {
              "name": "bar",
            },
          ],
        },
        [
          {
            "int": {
              "size": 32,
              "value": 2n,
            },
          },
          {
            "int": {
              "size": 32,
              "value": 3n,
            },
          },
        ],
      ],
    },
    {
      "name": "baz",
    },
  ],
}
`;

exports[`if match x { A => true, _ => false } { 1 } else { 0 } matches snapshot: Expression: if match x { A => true, _ => false } { 1 } else { 0 } 1`] = `
{
  "if_expr": {
    "cond": {
      "match": [
        {
          "name": "x",
        },
        [
          {
            "body": {
              "bool": true,
            },
            "guard": null,
            "pattern": {
              "constr": [
                {
                  "type": "A",
                },
                [],
              ],
            },
          },
          {
            "body": {
              "bool": false,
            },
            "guard": null,
            "pattern": {
              "name": "_",
            },
          },
        ],
      ],
    },
    "else_body": {
      "block": [
        {
          "expression": {
            "int": {
              "size": 32,
              "value": 0n,
            },
          },
        },
      ],
    },
    "if_body": {
      "block": [
        {
          "expression": {
            "int": {
              "size": 32,
              "value": 1n,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`x matches snapshot: PatternExpression: x 1`] = `
{
  "name": "x",
}
`;

exports[`_wild matches snapshot: PatternExpression: _wild 1`] = `
{
  "name": "_wild",
}
`;

exports[`Some matches snapshot: PatternExpression: Some 1`] = `
{
  "constr": [
    {
      "type": "Some",
    },
    [],
  ],
}
`;

exports[`Some(42) matches snapshot: PatternExpression: Some(42) 1`] = `
{
  "constr": [
    {
      "type": "Some",
    },
    [
      {
        "int": {
          "size": 32,
          "value": 42n,
        },
      },
    ],
  ],
}
`;

exports[`Pair(1, x) matches snapshot: PatternExpression: Pair(1, x) 1`] = `
{
  "constr": [
    {
      "type": "Pair",
    },
    [
      {
        "int": {
          "size": 32,
          "value": 1n,
        },
      },
      {
        "name": "x",
      },
    ],
  ],
}
`;

exports[`123 matches snapshot: PatternExpression: 123 1`] = `
{
  "int": {
    "size": 32,
    "value": 123n,
  },
}
`;

exports[`3.14 matches snapshot: PatternExpression: 3.14 1`] = `
{
  "float": {
    "size": 64,
    "value": 3.14,
  },
}
`;

exports[`"hello" matches snapshot: PatternExpression: "hello" 1`] = `
{
  "string": "hello",
}
`;

exports[`nan matches snapshot: PatternExpression: nan 1`] = `
{
  "float": {
    "size": 64,
    "value": NaN,
  },
}
`;

exports[`inf matches snapshot: PatternExpression: inf 1`] = `
{
  "float": {
    "size": 64,
    "value": Infinity,
  },
}
`;

exports[`#(x, y) matches snapshot: PatternExpression: #(x, y) 1`] = `
{
  "tuple": [
    {
      "name": "x",
    },
    {
      "name": "y",
    },
  ],
}
`;

exports[`#(1, 2, 3) matches snapshot: PatternExpression: #(1, 2, 3) 1`] = `
{
  "tuple": [
    {
      "int": {
        "size": 32,
        "value": 1n,
      },
    },
    {
      "int": {
        "size": 32,
        "value": 2n,
      },
    },
    {
      "int": {
        "size": 32,
        "value": 3n,
      },
    },
  ],
}
`;

exports[`#() matches snapshot: PatternExpression: #() 1`] = `
{
  "tuple": [],
}
`;

exports[`#{foo: x, bar: 42} matches snapshot: PatternExpression: #{foo: x, bar: 42} 1`] = `
{
  "record": [
    [
      {
        "name": "foo",
      },
      {
        "name": "x",
      },
    ],
    [
      {
        "name": "bar",
      },
      {
        "int": {
          "size": 32,
          "value": 42n,
        },
      },
    ],
  ],
}
`;

exports[`#{nested: Pair(x, y)} matches snapshot: PatternExpression: #{nested: Pair(x, y)} 1`] = `
{
  "record": [
    [
      {
        "name": "nested",
      },
      {
        "constr": [
          {
            "type": "Pair",
          },
          [
            {
              "name": "x",
            },
            {
              "name": "y",
            },
          ],
        ],
      },
    ],
  ],
}
`;

exports[`Some(#(x, #{y: 1})) matches snapshot: PatternExpression: Some(#(x, #{y: 1})) 1`] = `
{
  "constr": [
    {
      "type": "Some",
    },
    [
      {
        "tuple": [
          {
            "name": "x",
          },
          {
            "record": [
              [
                {
                  "name": "y",
                },
                {
                  "int": {
                    "size": 32,
                    "value": 1n,
                  },
                },
              ],
            ],
          },
        ],
      },
    ],
  ],
}
`;

exports[`Int matches snapshot: TypeExpression: Int 1`] = `
{
  "type": "Int",
}
`;

exports[`MyNamespace.Type matches snapshot: TypeExpression: MyNamespace.Type 1`] = `
{
  "select": {
    "name": {
      "type": "Type",
    },
    "root": {
      "type": "MyNamespace",
    },
  },
}
`;

exports[`(Int) -> Bool matches snapshot: TypeExpression: (Int) -> Bool 1`] = `
{
  "fn": {
    "args": [
      {
        "type": "Int",
      },
    ],
    "ret": {
      "type": "Bool",
    },
  },
}
`;

exports[`(Int, String) -> Bool matches snapshot: TypeExpression: (Int, String) -> Bool 1`] = `
{
  "fn": {
    "args": [
      {
        "type": "Int",
      },
      {
        "type": "String",
      },
    ],
    "ret": {
      "type": "Bool",
    },
  },
}
`;

exports[`() -> Void matches snapshot: TypeExpression: () -> Void 1`] = `
{
  "fn": {
    "args": [],
    "ret": {
      "type": "Void",
    },
  },
}
`;

exports[`#(Int, Bool, String) matches snapshot: TypeExpression: #(Int, Bool, String) 1`] = `
{
  "tuple": [
    {
      "type": "Int",
    },
    {
      "type": "Bool",
    },
    {
      "type": "String",
    },
  ],
}
`;

exports[`#() matches snapshot: TypeExpression: #() 1`] = `
{
  "tuple": [],
}
`;

exports[`#{x: Int, y: Bool} matches snapshot: TypeExpression: #{x: Int, y: Bool} 1`] = `
{
  "record": [
    {
      "name": {
        "name": "x",
      },
      "ty": {
        "type": "Int",
      },
    },
    {
      "name": {
        "name": "y",
      },
      "ty": {
        "type": "Bool",
      },
    },
  ],
}
`;

exports[`#{nested: #(Int, String), flag: Bool} matches snapshot: TypeExpression: #{nested: #(Int, String), flag: Bool} 1`] = `
{
  "record": [
    {
      "name": {
        "name": "nested",
      },
      "ty": {
        "tuple": [
          {
            "type": "Int",
          },
          {
            "type": "String",
          },
        ],
      },
    },
    {
      "name": {
        "name": "flag",
      },
      "ty": {
        "type": "Bool",
      },
    },
  ],
}
`;

exports[`#{a: Int}.a matches snapshot: TypeExpression: #{a: Int}.a 1`] = `
{
  "select": {
    "name": {
      "name": "a",
    },
    "root": {
      "record": [
        {
          "name": {
            "name": "a",
          },
          "ty": {
            "type": "Int",
          },
        },
      ],
    },
  },
}
`;

exports[`List<Int> matches snapshot: TypeExpression: List<Int> 1`] = `
{
  "app": {
    "args": [
      {
        "type": "Int",
      },
    ],
    "callee": {
      "type": "List",
    },
  },
}
`;

exports[`Map<String, Int> matches snapshot: TypeExpression: Map<String, Int> 1`] = `
{
  "app": {
    "args": [
      {
        "type": "String",
      },
      {
        "type": "Int",
      },
    ],
    "callee": {
      "type": "Map",
    },
  },
}
`;

exports[`Outer.Inner<Nested<T>> matches snapshot: TypeExpression: Outer.Inner<Nested<T>> 1`] = `
{
  "app": {
    "args": [
      {
        "app": {
          "args": [
            {
              "type": "T",
            },
          ],
          "callee": {
            "type": "Nested",
          },
        },
      },
    ],
    "callee": {
      "select": {
        "name": {
          "type": "Inner",
        },
        "root": {
          "type": "Outer",
        },
      },
    },
  },
}
`;

exports[`(Int, List<String>) -> Map<String, Int> matches snapshot: TypeExpression: (Int, List<String>) -> Map<String, Int> 1`] = `
{
  "fn": {
    "args": [
      {
        "type": "Int",
      },
      {
        "app": {
          "args": [
            {
              "type": "String",
            },
          ],
          "callee": {
            "type": "List",
          },
        },
      },
    ],
    "ret": {
      "app": {
        "args": [
          {
            "type": "String",
          },
          {
            "type": "Int",
          },
        ],
        "callee": {
          "type": "Map",
        },
      },
    },
  },
}
`;

exports[`(#(Int, Bool)) -> #{ok: String, err: String} matches snapshot: TypeExpression: (#(Int, Bool)) -> #{ok: String, err: String} 1`] = `
{
  "fn": {
    "args": [
      {
        "tuple": [
          {
            "type": "Int",
          },
          {
            "type": "Bool",
          },
        ],
      },
    ],
    "ret": {
      "record": [
        {
          "name": {
            "name": "ok",
          },
          "ty": {
            "type": "String",
          },
        },
        {
          "name": {
            "name": "err",
          },
          "ty": {
            "type": "String",
          },
        },
      ],
    },
  },
}
`;

exports[`a <- b matches snapshot: BodyExpression: a <- b 1`] = `
{
  "arrow_bind": {
    "expression": {
      "name": "b",
    },
    "name": {
      "name": "a",
    },
  },
}
`;

exports[`{ a; b; c } matches snapshot: BodyExpression: { a; b; c } 1`] = `
{
  "expression": {
    "block": [
      {
        "expression": {
          "name": "a",
        },
      },
      {
        "expression": {
          "name": "b",
        },
      },
      {
        "expression": {
          "name": "c",
        },
      },
    ],
  },
}
`;

exports[`let a = b matches snapshot: BodyExpression: let a = b 1`] = `
{
  "let_bind": {
    "assert": false,
    "expression": {
      "name": "b",
    },
    "pattern": {
      "name": "a",
    },
  },
}
`;

exports[`let Some(a) = b matches snapshot: BodyExpression: let Some(a) = b 1`] = `
{
  "let_bind": {
    "assert": false,
    "expression": {
      "name": "b",
    },
    "pattern": {
      "constr": [
        {
          "type": "Some",
        },
        [
          {
            "name": "a",
          },
        ],
      ],
    },
  },
}
`;

exports[`let assert Some(a) = b matches snapshot: BodyExpression: let assert Some(a) = b 1`] = `
{
  "let_bind": {
    "assert": true,
    "expression": {
      "name": "b",
    },
    "pattern": {
      "constr": [
        {
          "type": "Some",
        },
        [
          {
            "name": "a",
          },
        ],
      ],
    },
  },
}
`;

exports[`d = a + b matches snapshot: BodyExpression: d = a + b 1`] = `
{
  "assign": {
    "expression": {
      "infix": {
        "left": {
          "name": "a",
        },
        "op": "+",
        "right": {
          "name": "b",
        },
      },
    },
    "name": {
      "name": "d",
    },
  },
}
`;

exports[`fn add(x: I32, y: I32): I32 { x + y } matches snapshot 1`] = `
[
  null,
  {
    "fn": {
      "fn": {
        "body": {
          "block": [
            {
              "expression": {
                "infix": {
                  "left": {
                    "name": "x",
                  },
                  "op": "+",
                  "right": {
                    "name": "y",
                  },
                },
              },
            },
          ],
        },
        "name": {
          "name": "add",
        },
        "params": [
          {
            "guard": {
              "type": "I32",
            },
            "name": {
              "name": "x",
            },
          },
          {
            "guard": {
              "type": "I32",
            },
            "name": {
              "name": "y",
            },
          },
        ],
        "return_type": {
          "type": "I32",
        },
        "type_params": [],
      },
      "pub": false,
    },
  },
]
`;

exports[`pub fn main() { 42 } matches snapshot 1`] = `
[
  null,
  {
    "fn": {
      "fn": {
        "body": {
          "block": [
            {
              "expression": {
                "int": {
                  "size": 32,
                  "value": 42n,
                },
              },
            },
          ],
        },
        "name": {
          "name": "main",
        },
        "params": [],
        "return_type": null,
        "type_params": [],
      },
      "pub": true,
    },
  },
]
`;

exports[`fn identity<t>(x: t): t { x } matches snapshot 1`] = `
[
  null,
  {
    "fn": {
      "fn": {
        "body": {
          "block": [
            {
              "expression": {
                "name": "x",
              },
            },
          ],
        },
        "name": {
          "name": "identity",
        },
        "params": [
          {
            "guard": {
              "name": "t",
            },
            "name": {
              "name": "x",
            },
          },
        ],
        "return_type": {
          "name": "t",
        },
        "type_params": [
          {
            "name": "t",
          },
        ],
      },
      "pub": false,
    },
  },
]
`;

exports[`let x: i32 = 42 matches snapshot 1`] = `
[
  null,
  {
    "let_dec": {
      "guard": {
        "name": "i32",
      },
      "id": {
        "name": "x",
      },
      "pub": false,
      "value": {
        "int": {
          "size": 32,
          "value": 42n,
        },
      },
    },
  },
]
`;

exports[`pub let pi: f64 = 3.14159 matches snapshot 1`] = `
[
  null,
  {
    "let_dec": {
      "guard": {
        "name": "f64",
      },
      "id": {
        "name": "pi",
      },
      "pub": true,
      "value": {
        "float": {
          "size": 64,
          "value": 3.14159,
        },
      },
    },
  },
]
`;

exports[`let y = true matches snapshot 1`] = `
[
  null,
  {
    "let_dec": {
      "guard": null,
      "id": {
        "name": "y",
      },
      "pub": false,
      "value": {
        "bool": true,
      },
    },
  },
]
`;

exports[`type MyInt = I32 matches snapshot 1`] = `
[
  null,
  {
    "type_dec": {
      "id": {
        "type": "MyInt",
      },
      "params": [],
      "pub": false,
      "value": {
        "type": "I32",
      },
    },
  },
]
`;

exports[`pub enum Result<t, e> { Ok(t), Err(e) } matches snapshot 1`] = `
[
  null,
  {
    "enum": {
      "id": {
        "type": "Result",
      },
      "pub": true,
      "type_params": [
        {
          "name": "t",
        },
        {
          "name": "e",
        },
      ],
      "variants": [
        {
          "values": {
            "id": {
              "type": "Ok",
            },
            "values": [
              {
                "name": "t",
              },
            ],
          },
        },
        {
          "values": {
            "id": {
              "type": "Err",
            },
            "values": [
              {
                "name": "e",
              },
            ],
          },
        },
      ],
    },
  },
]
`;

exports[`enum Color { Red, Green(I32), Blue { shade: f32 } } matches snapshot 1`] = `
[
  null,
  {
    "enum": {
      "id": {
        "type": "Color",
      },
      "pub": false,
      "type_params": [],
      "variants": [
        {
          "values": {
            "id": {
              "type": "Red",
            },
            "values": [],
          },
        },
        {
          "values": {
            "id": {
              "type": "Green",
            },
            "values": [
              {
                "type": "I32",
              },
            ],
          },
        },
        {
          "fields": {
            "fields": [
              {
                "name": {
                  "name": "shade",
                },
                "ty": {
                  "name": "f32",
                },
              },
            ],
            "id": {
              "type": "Blue",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`pub enum Direction { Up, Down, Left, Right } matches snapshot 1`] = `
[
  null,
  {
    "enum": {
      "id": {
        "type": "Direction",
      },
      "pub": true,
      "type_params": [],
      "variants": [
        {
          "values": {
            "id": {
              "type": "Up",
            },
            "values": [],
          },
        },
        {
          "values": {
            "id": {
              "type": "Down",
            },
            "values": [],
          },
        },
        {
          "values": {
            "id": {
              "type": "Left",
            },
            "values": [],
          },
        },
        {
          "values": {
            "id": {
              "type": "Right",
            },
            "values": [],
          },
        },
      ],
    },
  },
]
`;

exports[`pub trait Eq<t> { fn eq(other: t) : bool } matches snapshot 1`] = `
[
  null,
  {
    "trait": {
      "fns": [
        {
          "name": {
            "name": "eq",
          },
          "params": [
            {
              "name": {
                "name": "other",
              },
              "ty": {
                "name": "t",
              },
            },
          ],
          "return_type": {
            "name": "bool",
          },
        },
      ],
      "id": {
        "type": "Eq",
      },
      "pub": true,
      "type_params": [
        {
          "name": "t",
        },
      ],
    },
  },
]
`;

exports[`trait Drawable { fn draw(): Void fn bounds(): Rect } matches snapshot 1`] = `
[
  null,
  {
    "trait": {
      "fns": [
        {
          "name": {
            "name": "draw",
          },
          "params": [],
          "return_type": {
            "type": "Void",
          },
        },
        {
          "name": {
            "name": "bounds",
          },
          "params": [],
          "return_type": {
            "type": "Rect",
          },
        },
      ],
      "id": {
        "type": "Drawable",
      },
      "pub": false,
      "type_params": [],
    },
  },
]
`;

exports[`import "std" { fn print as out } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "std",
      "imports": [
        {
          "fn": {
            "alias": {
              "name": "out",
            },
            "name": {
              "name": "print",
            },
            "signature": null,
          },
        },
      ],
    },
  },
]
`;

exports[`import "std" { memory "memory": 1 as mem } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "std",
      "imports": [
        {
          "memory": {
            "alias": {
              "name": "mem",
            },
            "max": null,
            "min": {
              "int": 1n,
            },
            "name": {
              "string": "memory",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "std" { global mut count: i32 as cnt } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "std",
      "imports": [
        {
          "global": {
            "alias": {
              "name": "cnt",
            },
            "global_type": {
              "name": "i32",
            },
            "mut": true,
            "name": {
              "name": "count",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { table "table": I32 0 0 as tbl } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "table": {
            "alias": {
              "name": "tbl",
            },
            "max": {
              "int": 0n,
            },
            "min": {
              "int": 0n,
            },
            "name": {
              "string": "table",
            },
            "table_type": {
              "type": "I32",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { type Option as Maybe } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "type": {
            "alias": {
              "type": "Maybe",
            },
            "name": {
              "type": "Option",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { trait Semiring } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "trait": {
            "alias": null,
            "name": {
              "type": "Semiring",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { builtin "i32.add" as add } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "builtin": {
            "alias": {
              "name": "add",
            },
            "name": {
              "string": "i32.add",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { item } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "name": {
            "alias": null,
            "name": {
              "name": "item",
            },
          },
        },
      ],
    },
  },
]
`;

exports[`import "wasm" { item as blah } matches snapshot 1`] = `
[
  null,
  {
    "import_dec": {
      "import_from": "wasm",
      "imports": [
        {
          "name": {
            "alias": {
              "name": "blah",
            },
            "name": {
              "name": "item",
            },
          },
        },
      ],
    },
  },
]
`;
